[package]
name = "firewheel-web-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
firewheel = "0.4"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Blob",
  "BlobPropertyBag",
  "Url",
  "AudioContext",
  "AudioContextOptions",
  "Performance",
  "AudioParam",
  "AudioContext",
  "AudioContextState",
  "AudioNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "AudioDestinationNode",
  "AudioWorkletGlobalScope",
  "Worker",
  "MediaStream",
  "MediaStreamAudioSourceOptions",
  "MediaStreamConstraints",
  "Navigator",
  "MediaDevices",
]
